[package]
name = "asphyx"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = "2.8.0"
bytemuck = "1.21.0"
parking_lot = "0.12.3"
static_assertions = "1.1.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
winit = "0.30.9"

[target.'cfg(windows)'.dependencies]
oxidx = { git = "https://github.com/if0ne/oxidx" }
